fix the form being to big on mobile

--- a/frontend/src/forms/parse-links/form-parse-links.css
+++ b/frontend/src/forms/parse-links/form-parse-links.css
@@ -1,4 +1,10 @@
 .form-parse-links textarea.input {
-  width: 450px;
   line-height: 1.5;
+}
+
+/* Bigger than tablet */
+@media (min-width: 700px) {
+  .form-parse-links textarea.input {
+    width: 450px;
+  }
 }
